Modified intro blurb

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header id="header">
 				<div class="inner">
 					<img class="image avatar" src="images/GlitchHeadshot.jpg" alt="" />
-					<h1>Hi! I'm <strong>Ruth Hill</strong>,<br />
+					<h1>I'm <strong>Ruth Hill</strong>,<br />
 					a software developer<br />
 					based in NYC.</h1>
 				</div>
@@ -23,11 +23,10 @@
 
 				<!-- One -->
 					<section id="one">
-						<header class="major speech-bubble">
-							<h2 class="blurb">I'm a developer currently looking for my next opportunity to build something amazing!</h2>
+						<header>
+							<h2 class="blurb">Hello and welcome!</h2>
 						</header>
-						<p>Aside from working on my own <a href="https://github.com/Asterids" target="_blank">projects</a>, most recently I've been developing an HCM web application with Lifion by ADP over the course of a year and a half. In early 2018 I completed the Grace Hopper Program at Fullstack Academy of Code, a transition from my former career in the arts.</p>
-						<p>My interests include data organization and visualization, crafting good tests, and exploring front-end design. I enjoy learning new languages and frameworks and being a part of a team - if you're looking for someone like me to join yours, let's talk!</p>
+						<p>I'm a developer well-versed in JavaScript and React with experience across the full stack. Aside from working on <a href="https://github.com/Asterids" target="_blank">projects</a> of my own, most recently I've been developing a global HCM web application with Lifion by ADP over the course of a year and a half. In early 2018 I completed the Grace Hopper Program at Fullstack Academy of Code, a pivot from my former career in the arts. My interests include data organization and visualization, crafting good tests, and exploring front-end design.</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/13iGD7knhNZCyTjHsYAL3IYgH2Gwzdj6i" target="_blank" class="button">View My Resume</a></li>
 						</ul>
@@ -159,7 +158,7 @@
 								<p>An interactive map-based web application for planning travel, recording itineraries, and exploring the world. Built with Node, Express, Mapbox GL, Postgres/Sequelize, and React.</p>
 								<p><a href="https://github.com/Asterids/daytripper" target="_blank">View on Github</a></p>
 							</article>
-							<!-- 
+							<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>[new project]</h3>
