Updated styling & headshot

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<img class="image avatar" src="images/GlitchHeadshot.jpg" alt="" />
+					<img class="image avatar" src="images/Headshot.jpg" alt="" />
 					<h1>I'm <strong>Ruth Hill</strong>,<br />
 					a software developer<br />
 					based in NYC.</h1>
