Updated live link to Daytripper

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<a href="images/fulls/DaytripperFull.png" class="image fit thumb"><img src="images/thumbs/daytripper.png" alt="Thumbnail of the Daytripper app main screen, a blue map with a right-sidebar overlaid." /></a>
 								<h3>Daytripper</h3>
 								<p>An interactive map-based web application for planning travel, recording itineraries, and exploring the world. Built with Node, Express, Mapbox GL, Postgres/Sequelize, and React.</p>
-								<p><a href="https://github.com/Asterids/daytripper" target="_blank">View on Github</a></p>
+								<p><a href="https://daytripper-app.herokuapp.com/" target="_blank">View Live</a></p>
 							</article>
 							<!--
 							<article class="col-6 col-12-xsmall work-item">
