--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
 								<p>A fast and fun in-browser platformer game created during a four-day hackathon using Phaser.io, Node.js, Express, HTML and CSS.</p>
 								<p><a href="https://rocket-ready.herokuapp.com/" target="_blank">View Live</a></p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/CSS_river.png" class="image fit thumb"><img src="images/fulls/CSS_river.png" alt="Thumbnail of a CSS drawing depicting a river with stones, grass, and a frog on a lilypad." /></a>
+								<h3>Drawing with CSS</h3>
+								<p>Inspired by <a href="https://whimsical.club/">The Whimsical Web</a>, <a href="https://a.singlediv.com/>">A Single Div</a>, and other CSS artists, I've been diving into the world of CSS drawing! Take a look at my first foray on Codepen.</p>
+								<p><a href="https://codepen.io/ruthtown/pen/NWxLgbL" target="_blank">View on Codepen</a></p>
+							</article>
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/Asterids" class="button" target="_blank">Find me on Github</a></li>
