Text changes - increase size and contrast

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<a href="images/fulls/DaytripperFull.png" class="image fit thumb"><img src="images/thumbs/daytripper.png" alt="Thumbnail of the Daytripper app main screen, a blue map with a right-sidebar overlaid." /></a>
 								<h3>Daytripper</h3>
 								<p>An interactive map-based web application for planning travel, recording itineraries, and exploring the world. Built with Node, Express, Mapbox GL, Postgres/Sequelize, and React.</p>
-								<p><a href="https://daytripper-app.herokuapp.com/" target="_blank">View Live</a></p>
+								<p class="link-spacing"><a href="https://daytripper-app.herokuapp.com/" class="live-link" target="_blank">View Live</a></p>
 							</article>
 							<!--
 							<article class="col-6 col-12-xsmall work-item">
@@ -170,19 +170,19 @@
 								<a href="images/fulls/PotluckFull.png" class="image fit thumb"><img src="images/thumbs/potluck.png" alt="Thumbnail of the Potluck app ledger view, displaying line items with icons representing trades between users." /></a>
 								<h3>Potluck</h3>
 								<p>A mobile-first web app for reducing food waste on a local scale through bartering via smart contracts and blockchain technology. Developed with Node, Solidity, Express, Web3, Postgres/Sequelize, and React-Redux.</p>
-								<p><a href="https://github.com/PotluckOrg/potluck-market2" target="_blank">View on Github</a></p>
+								<p class="link-spacing"><a href="https://github.com/PotluckOrg/potluck-market2" class="live-link" target="_blank">View on Github</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/RocketReadyFull.png" class="image fit thumb"><img src="images/thumbs/rocketready.png" alt="Thumbnail of Rocket Ready gameplay, with a user sprite, power gems, enemy slimes, and a rocket ship." /></a>
 								<h3>Rocket Ready</h3>
 								<p>A fast and fun in-browser platformer game created during a four-day hackathon using Phaser.io, Node.js, Express, HTML and CSS.</p>
-								<p><a href="https://rocket-ready.herokuapp.com/" target="_blank">View Live</a></p>
+								<p class="link-spacing"><a href="https://rocket-ready.herokuapp.com/" class="live-link" target="_blank">View Live</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/CSS_river.png" class="image fit thumb"><img src="images/fulls/CSS_river.png" alt="Thumbnail of a CSS drawing depicting a river with stones, grass, and a frog on a lilypad." /></a>
 								<h3>Drawing with CSS</h3>
 								<p>Inspired by <a href="https://whimsical.club/">The Whimsical Web</a>, <a href="https://a.singlediv.com/>">A Single Div</a>, and other CSS artists, I've been diving into the world of CSS drawing! Take a look at my first foray on Codepen.</p>
-								<p><a href="https://codepen.io/ruthtown/pen/NWxLgbL" target="_blank">View on Codepen</a></p>
+								<p class="link-spacing"><a href="https://codepen.io/ruthtown/pen/NWxLgbL" class="live-link" target="_blank">View on Codepen</a></p>
 							</article>
 						</div>
 						<ul class="actions">
