updated resume link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</header>
 						<p>I'm a developer well-versed in JavaScript and React with experience across the full stack. Aside from working on <a href="https://github.com/Asterids" target="_blank">projects</a> of my own, most recently I've been developing a global HCM web application with Lifion by ADP over the course of a year and a half. In early 2018 I completed the Grace Hopper Program at Fullstack Academy of Code, a pivot from my former career in the arts. My interests include data organization and visualization, crafting good tests, and exploring front-end design.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/13iGD7knhNZCyTjHsYAL3IYgH2Gwzdj6i" target="_blank" class="button">View My Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/13iGD7knhNZCyTjHsYAL3IYgH2Gwzdj6i/view?usp=sharing" target="_blank" class="button">View My Resume</a></li>
 						</ul>
 					</section>
 
