add frog and design credit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/frog-styles.css" />
 	</head>
 	<body class="is-preload">
 
@@ -188,6 +189,24 @@
 						<ul class="actions">
 							<li><a href="https://github.com/Asterids" class="button" target="_blank">Find me on Github</a></li>
 						</ul>
+					</section>
+					<section class="frog-section">
+						<div class="lilypad">
+							<div class="lilypad-divot"></div>
+							<div class="frog-container">
+								<div id="frog-body"></div>
+								<div id="frog-foot"></div>
+								<div id="frog-thigh"></div>
+								<div id="frog-hand"></div>
+								<div id="frog-foreleg1"></div>
+								<div id="frog-foreleg2"></div>
+								<div id="frog-head"></div>
+								<div id="frog-eye">
+								<div id="frog-eye1"></div>
+								<div id="pupil"></div>
+								</div>
+							</div>
+						</div>
 					</section>
 
 				<!-- Four -->
@@ -517,6 +536,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://github.com/Asterids" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/ruthehill" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto:ruthhill.e@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Ruth Hill</li><li>Design inspired by <a href="http://html5up.net">Strata</a></li>
 					</ul>
 				</div>
 			</footer>
