--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/CSS_river.png" class="image fit thumb"><img src="images/fulls/CSS_river.png" alt="Thumbnail of a CSS drawing depicting a river with stones, grass, and a frog on a lilypad." /></a>
 								<h3>Drawing with CSS</h3>
-								<p>Inspired by <a href="https://whimsical.club/">The Whimsical Web</a>, <a href="https://a.singlediv.com/>">A Single Div</a>, and other CSS artists, I've been diving into the world of CSS drawing! Take a look at my first foray on Codepen.</p>
+								<p>Inspired by <a href="https://whimsical.club/" target="_blank">The Whimsical Web</a>, <a href="https://a.singlediv.com/" target="_blank">A Single Div</a>, and other CSS artists, I've been diving into the world of CSS drawing! Take a look at my first foray on Codepen.</p>
 								<p class="link-spacing"><a href="https://codepen.io/ruthtown/pen/NWxLgbL" class="live-link" target="_blank">View on Codepen</a></p>
 							</article>
 						</div>
