--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/scroll-colors.js"></script>
 
 	</body>
 </html>
