:construction: Under construction message

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 				<!-- One -->
 					<section id="one">
 						<header>
-							<h2 class="blurb">Hello!</h2>
+							<!-- <h2 class="blurb">Hello!</h2> -->
 						</header>
-						<p>I'm a developer well-versed in JavaScript and React with experience across the full stack. Aside from working on <a href="https://github.com/Asterids" target="_blank">projects</a> of my own, most recently I've been developing a global HCM web application with Lifion by ADP over the course of a year and a half. In early 2018 I completed the Grace Hopper Program at Fullstack Academy of Code, a pivot from my former career in the arts. My interests include data organization and visualization, crafting good tests, and exploring front-end design.</p>
-						<ul class="actions">
+						<!-- <p>I'm a developer well-versed in JavaScript and React with experience across the full stack. Aside from working on <a href="https://github.com/Asterids" target="_blank">projects</a> of my own, most recently I've been developing a global HCM web application with Lifion by ADP over the course of a year and a half. In early 2018 I completed the Grace Hopper Program at Fullstack Academy of Code, a pivot from my former career in the arts. My interests include data organization and visualization, crafting good tests, and exploring front-end design.</p> -->
+						<!-- <ul class="actions">
 							<li><a href="https://drive.google.com/file/d/13iGD7knhNZCyTjHsYAL3IYgH2Gwzdj6i/view?usp=sharing" target="_blank" class="button">View My Resume</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<!-- <section id="three">
 						<h2>Core Competencies</h2>
 						<div class="skills">
 							<ul class="icons-grid">
@@ -147,18 +147,18 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Things I've Built</h2>
+						<!-- <h2>Things I've Built</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/DaytripperFull.png" class="image fit thumb"><img src="images/thumbs/daytripper.png" alt="Thumbnail of the Daytripper app main screen, a blue map with a right-sidebar overlaid." /></a>
 								<h3>Daytripper</h3>
 								<p>An interactive map-based web application for planning travel, recording itineraries, and exploring the world. Built with Node, Express, Mapbox GL, Postgres/Sequelize, and React.</p>
 								<p class="link-spacing"><a href="https://daytripper-app.herokuapp.com/" class="live-link" target="_blank">View Live</a></p>
-							</article>
+							</article> -->
 							<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
@@ -167,7 +167,7 @@
 								<p><a href="#">View Live</a></p>
 							</article>
 						  -->
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/PotluckFull.png" class="image fit thumb"><img src="images/thumbs/potluck.png" alt="Thumbnail of the Potluck app ledger view, displaying line items with icons representing trades between users." /></a>
 								<h3>Potluck</h3>
 								<p>A mobile-first web app for reducing food waste on a local scale through bartering via smart contracts and blockchain technology. Developed with Node, Solidity, Express, Web3, Postgres/Sequelize, and React-Redux.</p>
@@ -188,7 +188,8 @@
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/Asterids" class="button" target="_blank">Find me on Github</a></li>
-						</ul>
+						</ul> -->
+						<header>This site is currently under construction!</header>
 					</section>
 					<section class="frog-section">
 						<div class="lilypad">
