--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<img class="profile-thumb" src="images/headshot.jpg" alt="A headshot of Ruth smiling at the camera, wearing glasses, an orange top, and long hair with bangs." />
+							<img class="profile-thumb" src="images/headshot_lg.jpg" alt="A headshot of Ruth smiling at the camera, wearing glasses, an orange top, and long hair with bangs." />
 							<h1><span>Ruth E. Hill</span></h1>
 							<h2><span>Full Stack Developer</span></h2>
 							<p>
