--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Recommendations</h2>
+					<p>"Ruth writes reliable, crisp, quality code with sharp attention to detail. I learned a lot from Ruth's ability to think through all possible edge cases and account for them accordingly.”  —Tyler H., Senior Full Stack Engineer</p>
+					
+					<p>"Ruth excels in her uncanny ability to always go that one step further, capturing facets of a problem others would easily miss. Ruth brings that same thoughtfulness to her communication. She plans out loud and with you, and when she works on something, ensures she writes thorough documentation.”  —Matt C., IOS & Web Engineer</p>
+
+					<p>"As a content designer and writer, I've collaborated with many Full Stack Engineers, but Ruth is one of the best. Her attention to detail, her focus, and, yes, her kindness, make her such an easy person to work with and learn from.”  —Maggie B., Content & Marketing</p>
+
 					<h2>Hire Me!</h2>
 					<p>I'm always interested in learning about new opportunities where I can put my skills to good use. Feel free to reach out via <a href="mailto:ruthhill.e@gmail.com">email</a> or <a href="https://www.linkedin.com/in/ruthehill">LinkedIn</a> if you think we should chat!</p>
 					<p><a href="mailto:ruthhill.e@gmail.com" class="btn btn-default btn-lg">Contact Me</a></p>
