--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<ul class="info">
 						<li><span class="first-block">Goes By:</span><span class="second-block">Ruth (she/her)</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">ruthhill.e@gmail.com</span></li>
-						<li><span class="first-block">GitHub:</span><span class="second-block">github.com/Asterids</span></li>
+						<li><span class="first-block">GitHub:</span><span class="second-block"><a href="https://github.com/Asterids" target="_blank">github.com/Asterids</a></span></li>
 						<li><span class="first-block">Current Editor Theme:</span><span class="second-block">Noctis Minimus by Liviu Schera</span></li>
 						<li><span class="first-block">Top Skills:</span><div class="second-block skills-list">
 							<div>
