--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 	<div id="fh5co-features" class="animate-box">
 		<div class="container">
-			<div class="services-padding">
+			<div class="strengths-padding">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 						<h2>Where I Shine</h2>
@@ -268,9 +268,9 @@
 			</div>
 		</div>
 	</div>
-	
+
+
 	<div id="fh5co-started" class="fh5co-bg-color">
-		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -302,7 +302,15 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+			</div>
+		</div>
+	</div>
+
+
+	<div id="fh5co-cta" class="fh5co-bg-color">
+		<div>
+			<div>
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
 					<p>I'm always interested in learning about new opportunities where I can put my skills to good use. Feel free to reach out via <a href="mailto:ruthhill.e@gmail.com">email</a> or <a href="https://www.linkedin.com/in/ruthehill">LinkedIn</a> if you think we should chat!</p>
 					<p><a href="mailto:ruthhill.e@gmail.com" class="btn btn-default btn-lg">Contact Me</a></p>
