prep to add projects section, misc small fixes

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				</div>
 				<div class="col-md-8 about-me">
 					<h3>Hello!</h3>
-					<p>I'm a thoughtful, team-oriented developer well-versed in JavaScript, React, and data modeling with experience across the full stack. Most recently, I've spent three challenging and rewarding years developing a web application with a forward-thinking accessibility SaaS company called <a href="https://www.getstark.co/">Stark</a>. I had the opportunity to build the user management web application from the ground up including researching & leading the development of numerous features rapidly, ensuring security, scalability, & accessibility, coordinating integrations with many internal and external services, and collaborating heavily both within & across domains.</p>
+					<p>I'm a thoughtful, collaborative developer well-versed in JavaScript, React, and data modeling with experience across the full stack. Most recently, I've spent three challenging and rewarding years developing a web application with a forward-thinking accessibility SaaS company called <a href="https://www.getstark.co/">Stark</a>. I had the opportunity to build the user management web application from the ground up including researching & leading the development of numerous features rapidly, ensuring security, scalability, & accessibility, coordinating integrations with many internal and external services, and collaborating heavily both within & across domains.</p>
 						
 					<p>Prior to Stark, I worked on a global HCM platform at Lifion by ADP over the course of a year and a half, where I was responsible for implementing & rigorously refining features, testing, and improving the load times of our pages. I made my start in tech in late 2017, when I attended the Grace Hopper Program at Fullstack Academy of Code, a pivot from my former career in the arts (I was previously a professional glassblower & stained glass artisan). It's been quite a journey and I'm so glad I made the leap!</p>
 
@@ -178,6 +178,46 @@
 			</div>
 		</div>
 	</div>
+
+
+	<!-- <div id="fh5co-projects" class="fh5co-bg-color">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Projects</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="fh5co-rec animate-box">
+						<a href="https://github.com/Asterids/tiptap" class="rec-bg" target="_blank"><img src="images/tiptap_thumb.png"></a>
+						<div class="rec-text">
+							<h3>tiptap</h3>
+							<p>A typing speed test with customization options.</p>
+							<p><b>Built with: </b>Svelte & SvelteKit, Faker, Vite, and Playwright</p>
+							<div class="stuff">
+								<a href="https://github.com/Asterids/tiptap" target="_blank"><i class="icon-github-with-circle"></i></a>
+								<a href="#" target="_blank">View Live <i class="icon-arrow-right22"></i></a>
+							</div>
+						</div> 
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="fh5co-rec animate-box">
+						<a href="https://github.com/Asterids/daytripper" class="rec-bg" target="_blank"><img src="images/daytripper_thumb.png"></a>
+						<div class="rec-text">
+							<h3>DayTripper</h3>
+							<p>A travel itinerary planning web app for exploring & dreaming.</p>
+							<p><b>Built with: </b>Node, Express, Postgres, Sequelize, React, and MapboxGL</p>
+							<div class="stuff">
+								<a href="https://github.com/Asterids/daytripper" target="_blank"><i class="icon-github-with-circle"></i></a>
+							</div>
+						</div> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div> -->
 
 
 	<div id="fh5co-features" class="animate-box">
@@ -323,7 +363,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; Ruth Hill <br>Design modified from "Profile" at <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
+					<p>&copy; Ruth Hill <br>Design adapted from "Profile" at <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
 				</div>
 			</div>
 		</div>
