--- a/index.html
+++ b/index.html
@@ -147,20 +147,20 @@
 						<div class="col-md-10">
 							<div class="progress-wrap">
 								<h3>
+									<span class="name-left"><a href="https://abookapart.com/products/responsible-javascript" target="_blank">Responsible JavaScript</a> by Jeremy Wagner</span>
+									<span class="value-right">16%</span>
+								</h3>
+								<div class="progress">
+									<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar" aria-valuenow="16" aria-valuemin="0" aria-valuemax="100" style="width: 16%"></div>
+								</div>
+							</div>
+							<div class="progress-wrap">
+								<h3>
 									<span class="name-left"><a href="https://www.amazon.com/Resilient-Code-Maxims-Pain-free-Programming/dp/B09MBCW4SQ" target="_blank">Resilient Code: Maxims for Pain Free Programming</a> by Leonard Sperry</span>
 									<span class="value-right">55%</span>
 								</h3>
 								<div class="progress">
 									<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
-								</div>
-							</div>
-							<div class="progress-wrap">
-								<h3>
-									<span class="name-left"><a href="https://www.oreilly.com/library/view/the-non-designers-design/9780133966350/" target="_blank">The Non-Designer's Design Book</a> 4th Edition by Robin Williams</span>
-									<span class="value-right">100%</span>
-								</h3>
-								<div class="progress">
-									<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
 								</div>
 							</div>
 						</div>
